...
    private func setupNavigation(){
        // Set the navigation bar appearance
        navigationController?.navigationBar.prefersLargeTitles = false
        navigationController?.navigationBar.backgroundColor = UIColor(named: "PrimaryColor")
        navigationController?.navigationBar.titleTextAttributes = [.foregroundColor: UIColor.white]
        navigationController?.navigationBar.tintColor = .white
        self.title = "Detail"
        
        // Set the view background color
        view.backgroundColor = .white
        self.setupToggleButton()
    }
    
...
